# poetry2nix_pyside6

./: .gitignore  flake.nix  pyproject.toml
poetry2nix_example/: __init__.py  example.py
poetry2nix_example/subfolder/: submodule.py
