[tool.poetry]
name = "poetry2nix_example"
version = "0.1.0"
description = "Example for legacy Nix2Poetry with PySide 6.6.0"
authors = ["zierf <9168602+zierf@users.noreply.github.com>"]
license = "MIT"
packages = [
  { include = "poetry2nix_example", from = "." },
]

[build-system]
requires = ["poetry-core>=1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyside6 = "^6.6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
poetry2nix-example = 'poetry2nix_example.example:main'
